fix: refactor data model for domain management
