# api/configapi/api/configapi/types.gen.go
@@ -1,255 +1,0 @@
-// Package configapi provides primitives to interact with the openapi HTTP API.
-//
-// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.0 DO NOT EDIT.
-package configapi
-
-// Defines values for ApplyResponseStatus.
-const (
-	Error ApplyResponseStatus = "error"
-	Ok    ApplyResponseStatus = "ok"
-)
-
-// Defines values for BlocklistSourceListType.
-const (
-	BlocklistSourceListTypeAllow BlocklistSourceListType = "allow"
-	BlocklistSourceListTypeDeny  BlocklistSourceListType = "deny"
-)
-
-// Defines values for BlocklistSourceSourceType.
-const (
-	BlocklistSourceSourceTypeFile BlocklistSourceSourceType = "file"
-	BlocklistSourceSourceTypeHttp BlocklistSourceSourceType = "http"
-	BlocklistSourceSourceTypeText BlocklistSourceSourceType = "text"
-)
-
-// Defines values for BlocklistSourceInputListType.
-const (
-	BlocklistSourceInputListTypeAllow BlocklistSourceInputListType = "allow"
-	BlocklistSourceInputListTypeDeny  BlocklistSourceInputListType = "deny"
-)
-
-// Defines values for BlocklistSourceInputSourceType.
-const (
-	BlocklistSourceInputSourceTypeFile BlocklistSourceInputSourceType = "file"
-	BlocklistSourceInputSourceTypeHttp BlocklistSourceInputSourceType = "http"
-	BlocklistSourceInputSourceTypeText BlocklistSourceInputSourceType = "text"
-)
-
-// Defines values for CustomDNSEntryRecordType.
-const (
-	CustomDNSEntryRecordTypeA     CustomDNSEntryRecordType = "A"
-	CustomDNSEntryRecordTypeAAAA  CustomDNSEntryRecordType = "AAAA"
-	CustomDNSEntryRecordTypeCNAME CustomDNSEntryRecordType = "CNAME"
-)
-
-// Defines values for CustomDNSEntryInputRecordType.
-const (
-	CustomDNSEntryInputRecordTypeA     CustomDNSEntryInputRecordType = "A"
-	CustomDNSEntryInputRecordTypeAAAA  CustomDNSEntryInputRecordType = "AAAA"
-	CustomDNSEntryInputRecordTypeCNAME CustomDNSEntryInputRecordType = "CNAME"
-)
-
-// Defines values for DomainEntryEntryType.
-const (
-	DomainEntryEntryTypeExactAllow DomainEntryEntryType = "exact_allow"
-	DomainEntryEntryTypeExactDeny  DomainEntryEntryType = "exact_deny"
-	DomainEntryEntryTypeRegexAllow DomainEntryEntryType = "regex_allow"
-	DomainEntryEntryTypeRegexDeny  DomainEntryEntryType = "regex_deny"
-)
-
-// Defines values for DomainEntryInputEntryType.
-const (
-	DomainEntryInputEntryTypeExactAllow DomainEntryInputEntryType = "exact_allow"
-	DomainEntryInputEntryTypeExactDeny  DomainEntryInputEntryType = "exact_deny"
-	DomainEntryInputEntryTypeRegexAllow DomainEntryInputEntryType = "regex_allow"
-	DomainEntryInputEntryTypeRegexDeny  DomainEntryInputEntryType = "regex_deny"
-)
-
-// Defines values for ListBlocklistSourcesParamsListType.
-const (
-	Allow ListBlocklistSourcesParamsListType = "allow"
-	Deny  ListBlocklistSourcesParamsListType = "deny"
-)
-
-// Defines values for ListDomainEntriesParamsEntryType.
-const (
-	ExactAllow ListDomainEntriesParamsEntryType = "exact_allow"
-	ExactDeny  ListDomainEntriesParamsEntryType = "exact_deny"
-	RegexAllow ListDomainEntriesParamsEntryType = "regex_allow"
-	RegexDeny  ListDomainEntriesParamsEntryType = "regex_deny"
-)
-
-// ApplyResponse defines model for ApplyResponse.
-type ApplyResponse struct {
-	Error   *string             `json:"error,omitempty"`
-	Message string              `json:"message"`
-	Status  ApplyResponseStatus `json:"status"`
-}
-
-// ApplyResponseStatus defines model for ApplyResponse.Status.
-type ApplyResponseStatus string
-
-// BlockSettings defines model for BlockSettings.
-type BlockSettings struct {
-	BlockTtl  string `json:"block_ttl"`
-	BlockType string `json:"block_type"`
-}
-
-// BlockSettingsInput defines model for BlockSettingsInput.
-type BlockSettingsInput struct {
-	BlockTtl  string `json:"block_ttl"`
-	BlockType string `json:"block_type"`
-}
-
-// BlocklistSource defines model for BlocklistSource.
-type BlocklistSource struct {
-	Enabled    bool                      `json:"enabled"`
-	GroupName  string                    `json:"group_name"`
-	Id         int                       `json:"id"`
-	ListType   BlocklistSourceListType   `json:"list_type"`
-	Source     string                    `json:"source"`
-	SourceType BlocklistSourceSourceType `json:"source_type"`
-}
-
-// BlocklistSourceListType defines model for BlocklistSource.ListType.
-type BlocklistSourceListType string
-
-// BlocklistSourceSourceType defines model for BlocklistSource.SourceType.
-type BlocklistSourceSourceType string
-
-// BlocklistSourceInput defines model for BlocklistSourceInput.
-type BlocklistSourceInput struct {
-	Enabled    bool                           `json:"enabled"`
-	GroupName  string                         `json:"group_name"`
-	ListType   BlocklistSourceInputListType   `json:"list_type"`
-	Source     string                         `json:"source"`
-	SourceType BlocklistSourceInputSourceType `json:"source_type"`
-}
-
-// BlocklistSourceInputListType defines model for BlocklistSourceInput.ListType.
-type BlocklistSourceInputListType string
-
-// BlocklistSourceInputSourceType defines model for BlocklistSourceInput.SourceType.
-type BlocklistSourceInputSourceType string
-
-// ClientGroup defines model for ClientGroup.
-type ClientGroup struct {
-	Clients []string `json:"clients"`
-	Groups  []string `json:"groups"`
-	Id      int      `json:"id"`
-	Name    string   `json:"name"`
-}
-
-// ClientGroupInput defines model for ClientGroupInput.
-type ClientGroupInput struct {
-	Clients *[]string `json:"clients,omitempty"`
-	Groups  *[]string `json:"groups,omitempty"`
-}
-
-// CustomDNSEntry defines model for CustomDNSEntry.
-type CustomDNSEntry struct {
-	Domain     string                   `json:"domain"`
-	Enabled    bool                     `json:"enabled"`
-	Id         int                      `json:"id"`
-	RecordType CustomDNSEntryRecordType `json:"record_type"`
-	Ttl        int                      `json:"ttl"`
-	Value      string                   `json:"value"`
-}
-
-// CustomDNSEntryRecordType defines model for CustomDNSEntry.RecordType.
-type CustomDNSEntryRecordType string
-
-// CustomDNSEntryInput defines model for CustomDNSEntryInput.
-type CustomDNSEntryInput struct {
-	Domain     string                        `json:"domain"`
-	Enabled    bool                          `json:"enabled"`
-	RecordType CustomDNSEntryInputRecordType `json:"record_type"`
-	Ttl        int                           `json:"ttl"`
-	Value      string                        `json:"value"`
-}
-
-// CustomDNSEntryInputRecordType defines model for CustomDNSEntryInput.RecordType.
-type CustomDNSEntryInputRecordType string
-
-// DomainEntry defines model for DomainEntry.
-type DomainEntry struct {
-	Comment   string               `json:"comment"`
-	Domain    string               `json:"domain"`
-	Enabled   bool                 `json:"enabled"`
-	EntryType DomainEntryEntryType `json:"entry_type"`
-	Groups    []string             `json:"groups"`
-	Id        int                  `json:"id"`
-}
-
-// DomainEntryEntryType defines model for DomainEntry.EntryType.
-type DomainEntryEntryType string
-
-// DomainEntryInput defines model for DomainEntryInput.
-type DomainEntryInput struct {
-	Comment   *string                   `json:"comment,omitempty"`
-	Domain    string                    `json:"domain"`
-	Enabled   bool                      `json:"enabled"`
-	EntryType DomainEntryInputEntryType `json:"entry_type"`
-	Groups    []string                  `json:"groups"`
-}
-
-// DomainEntryInputEntryType defines model for DomainEntryInput.EntryType.
-type DomainEntryInputEntryType string
-
-// ErrorResponse defines model for ErrorResponse.
-type ErrorResponse struct {
-	Message string `json:"message"`
-}
-
-// ClientGroupName defines model for ClientGroupName.
-type ClientGroupName = string
-
-// ResourceID defines model for ResourceID.
-type ResourceID = int
-
-// BadRequest defines model for BadRequest.
-type BadRequest = ErrorResponse
-
-// NotFound defines model for NotFound.
-type NotFound = ErrorResponse
-
-// ListBlocklistSourcesParams defines parameters for ListBlocklistSources.
-type ListBlocklistSourcesParams struct {
-	GroupName *string                             `form:"group_name,omitempty" json:"group_name,omitempty"`
-	ListType  *ListBlocklistSourcesParamsListType `form:"list_type,omitempty" json:"list_type,omitempty"`
-}
-
-// ListBlocklistSourcesParamsListType defines parameters for ListBlocklistSources.
-type ListBlocklistSourcesParamsListType string
-
-// ListDomainEntriesParams defines parameters for ListDomainEntries.
-type ListDomainEntriesParams struct {
-	EntryType *ListDomainEntriesParamsEntryType `form:"entry_type,omitempty" json:"entry_type,omitempty"`
-}
-
-// ListDomainEntriesParamsEntryType defines parameters for ListDomainEntries.
-type ListDomainEntriesParamsEntryType string
-
-// PutBlockSettingsJSONRequestBody defines body for PutBlockSettings for application/json ContentType.
-type PutBlockSettingsJSONRequestBody = BlockSettingsInput
-
-// CreateBlocklistSourceJSONRequestBody defines body for CreateBlocklistSource for application/json ContentType.
-type CreateBlocklistSourceJSONRequestBody = BlocklistSourceInput
-
-// UpdateBlocklistSourceJSONRequestBody defines body for UpdateBlocklistSource for application/json ContentType.
-type UpdateBlocklistSourceJSONRequestBody = BlocklistSourceInput
-
-// PutClientGroupJSONRequestBody defines body for PutClientGroup for application/json ContentType.
-type PutClientGroupJSONRequestBody = ClientGroupInput
-
-// CreateCustomDNSEntryJSONRequestBody defines body for CreateCustomDNSEntry for application/json ContentType.
-type CreateCustomDNSEntryJSONRequestBody = CustomDNSEntryInput
-
-// UpdateCustomDNSEntryJSONRequestBody defines body for UpdateCustomDNSEntry for application/json ContentType.
-type UpdateCustomDNSEntryJSONRequestBody = CustomDNSEntryInput
-
-// CreateDomainEntryJSONRequestBody defines body for CreateDomainEntry for application/json ContentType.
-type CreateDomainEntryJSONRequestBody = DomainEntryInput
-
-// UpdateDomainEntryJSONRequestBody defines body for UpdateDomainEntry for application/json ContentType.
-type UpdateDomainEntryJSONRequestBody = DomainEntryInput
